src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Asset Collection</fullName>
        <description>CSP-2749 Asset Collections Cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed Duplicate</fullName>
        </values>
        <values>
            <fullName>Complete</fullName>
        </values>
        <values>
            <fullName>Materials in</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Proof Out</fullName>
        </values>
        <values>
            <fullName>Renewal Follow Up</fullName>
        </values>
        <values>
            <fullName>Vendor Contacted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>CB Inbound</fullName>
        <description>CSP-2783</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed Duplicate</fullName>
        </values>
        <values>
            <fullName>Escalated to Manager</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Waiting on AS</fullName>
        </values>
        <values>
            <fullName>Waiting on Customer</fullName>
        </values>
        <values>
            <fullName>Waiting on Rep</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Cancels</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed Duplicate</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Re-Opened</fullName>
        </values>
        <values>
            <fullName>Waiting for AE</fullName>
        </values>
        <values>
            <fullName>Waiting for Customer</fullName>
        </values>
        <values>
            <fullName>Waiting for Manager</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Client Billing</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>1-15 Days Past Due</fullName>
        </values>
        <values>
            <fullName>16-30 Days Past Due</fullName>
        </values>
        <values>
            <fullName>31-45 Days Past Due</fullName>
        </values>
        <values>
            <fullName>46-60 Days Past Due</fullName>
        </values>
        <values>
            <fullName>61-75 Days Past Due</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed Duplicate</fullName>
        </values>
        <values>
            <fullName>Escalated to Manager</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Payment Plan</fullName>
        </values>
        <values>
            <fullName>Promise To Pay</fullName>
        </values>
        <values>
            <fullName>Waiting on AS</fullName>
        </values>
        <values>
            <fullName>Waiting on Account Manager</fullName>
        </values>
        <values>
            <fullName>Waiting on Customer</fullName>
        </values>
        <values>
            <fullName>Waiting on Loyalty Manager</fullName>
        </values>
        <values>
            <fullName>Waiting on RBS</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Default</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed Duplicate</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Re-Opened</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>In House Collections</fullName>
        <description>CSP-2612</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed Duplicate</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>Good Faith Payment</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>No Commitment</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Payment Plan</fullName>
        </values>
        <values>
            <fullName>Promise To Pay</fullName>
        </values>
        <values>
            <fullName>Waiting for AE</fullName>
        </values>
        <values>
            <fullName>Waiting for Customer</fullName>
        </values>
        <values>
            <fullName>Waiting for Manager</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Inbound</fullName>
        <description>CSP-2750 Inbound Cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed Duplicate</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Waiting for AE</fullName>
        </values>
        <values>
            <fullName>Waiting for Customer</fullName>
        </values>
        <values>
            <fullName>Waiting for Manager</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Onboarding</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Attempts In Progress</fullName>
        </values>
        <values>
            <fullName>Call Rescheduled</fullName>
        </values>
        <values>
            <fullName>Call Scheduled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed Completed</fullName>
        </values>
        <values>
            <fullName>Closed Customer Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed Declined</fullName>
        </values>
        <values>
            <fullName>Closed Duplicate</fullName>
        </values>
        <values>
            <fullName>Closed No Show</fullName>
        </values>
        <values>
            <fullName>Customer Cancelled</fullName>
        </values>
        <values>
            <fullName>Customer No Show</fullName>
        </values>
        <values>
            <fullName>Max Attempts</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Re-Opened</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Rep Billing</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed Duplicate</fullName>
        </values>
        <values>
            <fullName>Escalated to Manager</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Waiting on AS</fullName>
        </values>
        <values>
            <fullName>Waiting on Customer</fullName>
        </values>
        <values>
            <fullName>Waiting on Rep</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Reviews</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed Duplicate</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Re-Opened</fullName>
        </values>
        <values>
            <fullName>Waiting on Documentation from Reviewer</fullName>
        </values>
        <values>
            <fullName>Waiting on Documentation from Vendor</fullName>
        </values>
        <values>
            <fullName>Waiting on Edit</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Voicemail</fullName>
        <description>These are the steps that will be needed for voicemails</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed Duplicate</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Re-Opened</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Owner_Close__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CSP-2806 save Account owner at the close of the case</description>
        <label>Account Owner(Close)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account.Owner.FirstName + &apos; &apos; + Account.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Past_Due_Balance__c</fullName>
        <description>SS-5159. Looks up to the account object for the value</description>
        <formula>Account.Past_Due_Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Past Due Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_SS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account SS</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_TCV__c</fullName>
        <description>This field is used to store the Account TCV on Case object when insert Case or update Case assignment since there is not track history for TCV on Account.</description>
        <label>Account TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_VIP_Program__c</fullName>
        <formula>Account.VIP_Program__c</formula>
        <label>Account VIP Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attempts__c</fullName>
        <label>Attempts</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Audited_By_Reviews_Team__c</fullName>
        <description>SS-4256</description>
        <label>Audited By Reviews Team</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Audited_By__c</fullName>
        <description>SS-4256</description>
        <label>Audited By</label>
        <picklist>
            <controllingField>Audited_By_Reviews_Team__c</controllingField>
            <picklistValues>
                <fullName>Benjamin Francois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rhianna Reed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ryan DeaKyne</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Auto_Reply_Flag__c</fullName>
        <defaultValue>true</defaultValue>
        <description>if this field checked, we should auto reply the email for review case,
if unchecked, we must not reply.</description>
        <label>Auto Reply Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Banner__c</fullName>
        <formula>IF(Account.Cancel_For_Convenience__c == true,
IMAGE(&quot;https://xogrp--c.na55.content.force.com/servlet/servlet.ImageServer?id=015f1000002bVJt&amp;oid=00Dj0000000KVB8&quot;,&quot;Cancel for Convenience&quot;,20,600),  
&apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Banner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BetaOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Beta Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <formula>Account.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Object_Identifier__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This is the GUID from New Voice Media that will allow the NVM Embedded Player to find and play the recording.</description>
        <externalId>true</externalId>
        <inlineHelpText>This GUID relates to the record in NVM</inlineHelpText>
        <label>Call Object Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Campaign_Started__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Campaign Started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancel_Case_Type__c</fullName>
        <description>CSP-2806 Mark Cancel Cases as BoB versus Service</description>
        <label>Cancel Case Type</label>
        <picklist>
            <picklistValues>
                <fullName>BoB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cancel_Reason_Drilldown__c</fullName>
        <label>Cancel Reason Drilldown</label>
        <picklist>
            <controllingField>Reason</controllingField>
            <picklistValues>
                <fullName>Lead Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Volume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Bookings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Length/Auto-Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Appropriate for The Knot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Better Product/Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More affordable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Leads/Bookings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OOB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overbooked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No longer in the Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Quality/Volume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business/Market/Category not Appropriate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Reason Given</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cancel_Reason_Notes__c</fullName>
        <label>Cancel Reason Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Card_Declined__c</fullName>
        <formula>Account.Card_Declined__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Card Declined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseOwnerSalesRepIDClose__c</fullName>
        <formula>Case_Owner_Close__r.SalesRepID__c</formula>
        <label>Case Owner SalesRep ID(Close)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Closed_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CSP-2806 the case has been closed flag</description>
        <label>Case Closed Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Close__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CSP-2806 save Case owner at the close of the case</description>
        <label>Case Owner(Close)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Queue_Close__c</fullName>
        <description>CSP-2806 Mark Cancel Cases as BoB versus Service</description>
        <label>Case Queue(Close)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Reason_Drilldown__c</fullName>
        <label>Case Reason Drilldown</label>
        <picklist>
            <controllingField>Reason</controllingField>
            <picklistValues>
                <fullName>Did Not Book/Cancel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does not Recognize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False Statements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harassment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inappropriate Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shutterfly Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request to Edit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request to remove</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor Inquiry</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Related_to_Child_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate when a case is related specifically to a child account</description>
        <label>Case Related to Child Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Notes__c</fullName>
        <label>Close Notes</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Copy_of_Contact_Phone__c</fullName>
        <description>This field is being used by New Voice Media to match incoming calls to cases, contact phone is a formula field that is not able to be used by New Voice Media. It will be filled in via a workflow that checks if the value has been updated in Contact Phone and then fill in the data into this field. SS-4187</description>
        <label>Copy of Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Count_Of_FRC__c</fullName>
        <description>CSP-2484</description>
        <label>Count Of FRC</label>
        <summaryForeignKey>Feature_Requested_Cancelled__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Customer_Phone__c</fullName>
        <description>Creating for ticket SS-5562. To be used for NVM when a Case is created by NVM to fill in the phone number of the caller.</description>
        <inlineHelpText>This phone number will be filled in by NVM when they create a case. This phone number will often be the same as the contact phone but if there is no matching contact this field will give you a view into what phone number the call originated from.</inlineHelpText>
        <label>Customer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <formula>TEXT(Account.Customer_Type__c)</formula>
        <label>Customer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_and_Time_Request_Received__c</fullName>
        <description>Indicate the date that the original request was sent from the customer by an AE/SS/CBSS</description>
        <label>Date and Time Request Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Review__c</fullName>
        <label>Date of Review</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description_Custom__c</fullName>
        <description>Move the description data</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Display_ID__c</fullName>
        <label>Display ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dollar_Amount_Saved__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Dollar amount saved (in contract)</description>
        <label>Dollar Amount Saved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Duplicated_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enter the case this case was a duplicate of</description>
        <label>Duplicated Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Duplicated Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EmailAttempts__c</fullName>
        <label>Email Attempts</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Closed_Date__c</fullName>
        <description>CSP-2806 Get stamped first closed date time</description>
        <label>First Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Attempts__c</fullName>
        <label>Follow Up Attempts</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Date__c</fullName>
        <description>SS-4038</description>
        <label>Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InBusinessSince__c</fullName>
        <description>Copy from field In Business Since on Account(CSP-2671)</description>
        <label>In Business Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Instagram__c</fullName>
        <label>Instagram</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDE_Launch_Date__c</fullName>
        <description>Lists the launch date for the LDE; if not LDE value is null</description>
        <label>LDE Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Date_of_Service__c</fullName>
        <description>If canceling or &quot;saved for non-renewal&quot; enter last date of service</description>
        <label>Last Date of Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Volume_Last_6_Months__c</fullName>
        <label>Lead Volume Last 6 Months</label>
        <picklist>
            <picklistValues>
                <fullName>0-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16-30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50+</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be used by New Voice Media to connect Cases to Leads. I will only add it to the Voicemail Case type as of 7/18/2017. Created for CSP-2150.</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Local_Paid_Status__c</fullName>
        <formula>TEXT(Account.Local_Paid_Status__c)</formula>
        <label>Local Paid Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_ID__c</fullName>
        <formula>Account.DynamicsAccID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longest_Past_Due__c</fullName>
        <formula>Account.Longest_Past_Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Longest Past Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Make_Good_Drilldown__c</fullName>
        <label>Make Good Drilldown</label>
        <picklist>
            <controllingField>Saved_By__c</controllingField>
            <picklistValues>
                <fullName>Rate Freeze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buzz Badge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spolight Banner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Featured Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Featured Vendor</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monthly_Budget_Discount__c</fullName>
        <description>SS-5386</description>
        <label>Monthly Budget Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Budget__c</fullName>
        <label>Monthly Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Months_Left_In_Contract__c</fullName>
        <label>Months Left In Contract</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Months_with_TK__c</fullName>
        <description>Time with The Knot in months</description>
        <label>Months with TK</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Multiple_Review_IDs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multiple Review IDs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Multiple_Storefronts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multiple Storefronts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__EmailSentTo__c</fullName>
        <label>EmailSentTo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMAccountOverride__c</fullName>
        <label>NVMAccountOverride</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMCaseOrigin__c</fullName>
        <description>The content of this field is presented on the contact pad when a case is assigned to an agent. For example: Email</description>
        <inlineHelpText>The content of this field is presented on the contact pad when a case is assigned to an agent. For example: Email</inlineHelpText>
        <label>NVM Case Origin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMNodeOverride__c</fullName>
        <description>Used to override the NewVoiceMedia node a case routing request is sent to</description>
        <inlineHelpText>Used to override the NewVoiceMedia node a case routing request is sent to</inlineHelpText>
        <label>NVMNodeOverride</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMOverrideCaseOwnerTimeoutLoggedIn__c</fullName>
        <description>Override: how long to try to route replies to the case owner, when they are logged in</description>
        <inlineHelpText>Override: how long to try to route replies to the case owner, when they are logged in</inlineHelpText>
        <label>NVMOverrideCaseOwnerTimeoutLoggedIn</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMOverrideCaseOwnerTimeoutLoggedOut__c</fullName>
        <description>Override: how long to try to route replies to the case owner, when they are logged out</description>
        <inlineHelpText>Override: how long to try to route replies to the case owner, when they are logged out</inlineHelpText>
        <label>NVMOverrideCaseOwnerTimeoutLoggedOut</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>